-Fixed some style which caused the main match list to behave very poorly on really small desktop screens (mainly short screens). Switched flex items to use auto flex where needed to that when the content was bigger the screen flex box didn't cause overflow to go off the screen.

--- a/styles/home.css
+++ b/styles/home.css
@@ -18,8 +18,6 @@ body {
     background-color: #1e1f33;
     background-size: auto 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
 
@@ -33,6 +31,7 @@ input, select, button {
     border-radius: 20px;
     background: white;
     transition: all 0.4s linear;
+    margin: auto auto 0;
 }
 
 #searchContainer.expanded {
@@ -80,9 +79,10 @@ input, select, button {
     box-sizing: border-box;
     padding: 10px;
     opacity: .8;
-    background-color: #1e1f33;
+    background: #1e1f33 fixed;
     transition: all 0.4s;
     transition-delay: 0.4s;
+    margin: 0 auto auto;
 }
 
 #summonerContainer.hidden {
@@ -299,10 +299,6 @@ input, select, button {
 
 @media screen and (min-width: 1200px) {
 
-    body {
-        background-size: auto;
-    }
-
     #searchContainer {
         width: 60%;
     }
@@ -315,6 +311,7 @@ input, select, button {
     #summonerContainer {
         width: 80%;
         height: 80%;
+        min-height: 745px;
         border: 2px solid white;
         border-top: 0;
         border-radius: 0 0 20px 20px;
@@ -322,6 +319,7 @@ input, select, button {
 
     #summonerContainer.hidden {
         height: 0;
+        min-height: 0;
         border: 0;
         padding: 0;
     }
